fix(security): final unifed security patch and maven permissions